# ventrica

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md
.cargo/: config.toml
layout/: com.claration.ventricad.plist
ventrica/: Cargo.toml
ventrica/src/: env.rs  error.rs  lib.rs  platform.rs
ventrica/src/models/: generation.rs  mod.rs  package.rs  repo.rs
ventrica/src/repo/: build.rs  client.rs  mod.rs  remote.rs
ventrica/src/schema/: kdl.rs  mod.rs  package.rs  repo.rs
ventrica/src/store/: db.rs  live.rs  mod.rs  store.rs  var.rs
ventrica/src/utils/: unix.rs
ventrica/template/: _package.kdl  _repo.kdl
ventrica_cli/: Cargo.toml
ventrica_cli/src/: main.rs
ventrica_ffi/: Cargo.toml  build.rs
ventrica_ffi/module/: module.modulemap
ventrica_ffi/src/: lib.rs
ventrica_mac/: Ventrica.xcconfig
ventrica_mac/Ventrica/: AppDelegate.swift  Entry.swift  VNAppDelegate.swift  VNEntry.swift
ventrica_mac/Ventrica.xcodeproj/: project.pbxproj
ventrica_mac/Ventrica.xcworkspace/: contents.xcworkspacedata
ventrica_mac/Ventrica/Extensions/: Bundle++.swift  NSNotification++.swift  NSToolbarItem++.swift  ProcessInfo++.swift  String+localized.swift
ventrica_mac/Ventrica/Resources/: Localizable.xcstrings
ventrica_mac/Ventrica/Resources/onboarding.ca/: index.xml  main.caml
ventrica_mac/Ventrica/Supporting Files/: Ventrica-Bridging-Header.h
ventrica_mac/Ventrica/Supporting Files/Headers/: MobileGestalt.h  QuartzCore.h
ventrica_mac/Ventrica/Utilities/: ImageLoader.swift  InstallQueue.swift  VNImageLoader.swift
ventrica_mac/Ventrica/Utilities/Wrappers/: Package.swift  Repo.swift  VNPackage.swift  VNRepo.swift
ventrica_mac/Ventrica/Views/: AboutWindowController.swift  MainWindowController.swift  VNAboutWindowController.swift  VNMainWindowController.swift
ventrica_mac/Ventrica/Views/App/: VNSidebarViewController.swift
ventrica_mac/Ventrica/Views/App About/: AboutViewController.swift  VNAboutViewController.swift
ventrica_mac/Ventrica/Views/App Onboarding/: VNOnboardingViewController.swift
ventrica_mac/Ventrica/Views/App Sidebar/: MainSplitViewCellView.swift  MainSplitViewController.swift  VNMainSplitViewController.swift  VNSidebarViewController.swift
ventrica_mac/Ventrica/Views/Queue/: QueueBarView.swift  (+1 more)
ventrica_mac/VentricaUI/: Package.swift
ventricad/: Cargo.toml
ventricad/src/: handler.rs  lib.rs  logging.rs  main.rs  protocol.rs  server.rs
ventricad/src/ops/: add_repo.rs  build_repo.rs  deps.rs  gc.rs  install.rs  list.rs  mod.rs  remove.rs  repos.rs  rollback.rs  search.rs  update.rs  upgrade.rs
(+32 files in other folders)
