[package]
name = "ventrica"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
log.workspace = true
walkdir.workspace = true
sha2 = "0.11"
hex = "0.4"
semver = "1.0"
tempfile = "3.27"
thiserror = "2.0"
curl = { version = "0.4", features = ["mesalink"], default-features = false }

flate2 = "1.1"
tar = "0.4"
bzip2 = "0.6"
lzma-rs = "0.3"

rusqlite = { version = "0.32", features = ["bundled"] }
rmp-serde = "1.3"


miette = "7.6.0"
kdl = "6.6.0"

const_env = "0.1"
concat_const = "0.2.0"

[dev-dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
