[package]
name = "ventricad"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ventricad"
path = "src/lib.rs"

[[bin]]
name = "ventricad"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
log.workspace = true
walkdir.workspace = true
ventrica = { path = "../ventrica" }
